--- a/packages/plugin-ext/src/main/browser/style/webview.css
+++ b/packages/plugin-ext/src/main/browser/style/webview.css
@@ -14,7 +14,13 @@
  * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
  ********************************************************************************/
 
-.theia-webview-iframe {
+.theia-webview {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.theia-webview iframe {
     flex-grow: 1;
     border: none; margin: 0; padding: 0;
 }
