Add search result information to search-in-workspace
Included search result information for the `search-in-workspace` widget,
displaying both result and file count

Signed-off-by: Vincent Fugnitto <vincent.fugnitto@ericsson.com>

--- a/packages/search-in-workspace/src/browser/styles/index.css
+++ b/packages/search-in-workspace/src/browser/styles/index.css
@@ -222,6 +222,11 @@
     font-size: var(--theia-ui-font-size0);
 }
 
+.t-siw-search-container .searchHeader .search-info {
+    color: var(--theia-ui-font-color2);
+    margin-left: 17px;
+}
+
 .t-siw-search-container .resultContainer {
     height: 100%;
 }
